--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,5 +10,30 @@
   <title>Ironhack cart</title>
 </head>
 <body>
+  <h1>IronHack Merchandising Shop</h1>
+  <div class="container">
+    <div class="item">
+      <div><span>IronBubble-head</span></div>
+      <div><span class="price">25</span></div>
+      <div><label>QTY</label><input class="quanty" type="number"></div>
+      <div><span class="total">0</span></div>
+      <div><input class="btn btn-delete" type="button" value="Delete"></div>
+    </div>
+    
+    <div class="item">
+      <div><span>papeles</span></div>
+      <div><span class="price">45</span></div>
+      <div><label>QTY</label><input class="quanty" type="number"></div>
+      <div><span class="total">0</span></div>
+      <div><input class="btn btn-delete" type="button" value="Delete"></div>
+    </div> 
+  </div>
+
+  <div class="final-price">
+    <div><input id="calc-prices-button" class="btn btn-success" type="button" value="Calculate price"></div>
+    <h2>Total Price <span id="totalSum">0</span></h2>
+  </div>
+
+
 </body>
 </html>
